syntax = "proto3";
//import "google/protobuf/any.proto";
option csharp_namespace = "GrpcService";


package config;

// The greeting service definition.
service Config {
  // Sends a greeting
  rpc CreateEnumTypeConfigs (GrpcEnumTypeConfigRequest) returns (GrpcEnumTypeConfigResponse);
  rpc GetEnumTypeConfig(Query) returns(GrpcEnumTypeConfig);
}

message GrpcEnumType{
	string name=1;
	string displayName=2;
	int32 value=3;
}

message GrpcEnumTypeConfigModel{
	string name=1;
	string display_name=2;
	string description=3;
	repeated GrpcEnumType enums=4; 
}

message GrpcEnumTypeConfigRequest{
	repeated GrpcEnumTypeConfigModel items=1;
}

message GrpcEnumTypeConfig{
	string id=1;
	string name=2;
	string display_name=3;
	string description=4;
	repeated GrpcEnumType enums=5;
}

message GrpcEnumTypeConfigResponse{
	repeated GrpcEnumTypeConfig items=1;
}

message Query{
	string id=1;
}


